om-side tilføjet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 
@@ -14,7 +15,7 @@
     <header>
         <nav>
             <a href="index.html">Forside</a>
-            <a href="cv.html">CV</a>
+            <a href="cv.html">Om</a>
             <a href="portfolio.html">Portfolio</a>
         </nav>
     </header>
