--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="om">
+        <nav>
             <a href="index.html">Forside</a>
             <a href="cv.html">Om</a>
             <a href="portfolio.html">Portfolio</a>
