--- a/portfolio.html
+++ b/portfolio.html
@@ -71,11 +71,13 @@
             <h1>Tema 4</h1>
             <h2>Grundlæggende UX</h2>
             <div class="opgave">
-                <p></p>
+                <p>I UX temaet har vi beskæftiget os med samarbejdet mellem brugere og brugergrænseflader. Til dette har vi benyttet os af forskellige værktøjer, tests og research, og lavet en prototype af et fronter redesign.</p>
                 <a href="http://johannielsen.dk/kea/eksamen/Fronter%20prototype.pdf">● 04.02.01 - Web prototype</a>
             </div>
         </div>
     </div>
+    <footer>Lavet af Johan Høyen Nielsen</footer>
+
 
 </body>
 
