--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             </div>
             <br>
             <div class="opgave">
-                <p>Til virksomhedsvideon benyttede vi os af mange af de samme kompetencer som vi lærte til pilotprojektet. Vi lavede et storyboard til at til at hjælpe os med de shots vi gerne ville have, og havde fokus på det gyldne snit i interviewet. </p>
+                <p>Til virksomhedsvideon benyttede vi os af mange af de samme kompetencer som vi lærte til pilotprojektet. Vi lavede et storyboard til at hjælpe os med de shots vi gerne ville have, og havde fokus på det gyldne snit i interviewet. </p>
                 <a href="http://johannielsen.dk/kea/03-content/03-redesign/03_02_05_virksomhedsvideo/Gruppe10_JP.mp4">● 03.02.05 - Virksomhedsvideo</a>
             </div>
             <br>
